// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonSplit closes menu on click to the item 1`] = `
<svg
  class="PicassoSvgArrowDownMinor24-root-162"
  style="min-width: 24px; min-height: 24px;"
  viewBox="0 0 24 24"
>
  <path
    d="m18.007 8.3.707.707-6 6-.707.707-.707-.707-6-6 .707-.707 6 6 6-6Z"
  />
</svg>
`;

exports[`ButtonSplit default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoButtonGroup-root"
    >
      <button
        class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root PicassoButtonSplit-primaryVariant PicassoButtonSplit-actionButton"
        data-component-type="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          Action
        </span>
      </button>
      <div
        class="PicassoDropdown-root PicassoButtonSplit-dropdown"
      >
        <div
          class="PicassoDropdown-anchor"
        >
          <button
            class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root PicassoButtonSplit-primaryVariant PicassoButtonSplit-menuButton PicassoButtonSplit-mediumSize"
            data-component-type="button"
            tabindex="0"
            type="button"
          >
            <span
              class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
            >
              <svg
                class="PicassoSvgArrowDownMinor16-root"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="m11.997 5.29.707.707-4 4-.707.707-.707-.707-4-4 .707-.707 4 4 4-4Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ButtonSplit renders arrow down icon for a closed menu 1`] = `
<svg
  class="PicassoSvgArrowDownMinor16-root-162"
  style="min-width: 16px; min-height: 16px;"
  viewBox="0 0 16 16"
>
  <path
    d="m11.997 5.29.707.707-4 4-.707.707-.707-.707-4-4 .707-.707 4 4 4-4Z"
  />
</svg>
`;

exports[`ButtonSplit renders arrow up icon for an opened menu 1`] = `
<svg
  class="PicassoSvgArrowDownMinor16-root-162 PicassoButtonSplit-rotated-12"
  style="min-width: 16px; min-height: 16px;"
  viewBox="0 0 16 16"
>
  <path
    d="m11.997 5.29.707.707-4 4-.707.707-.707-.707-4-4 .707-.707 4 4 4-4Z"
  />
</svg>
`;
